@@ -2,6 +2,7 @@
 ====
 
 - Fix fractional scaling beeing blury by setting GDK_DEBUG=gl-no-fractional as default
+- Fix exposure times above 0.5 seconds not being displayed correctly in properties
 
 46.1
 ====
